# winenow

./: .gitignore  README.md  pyproject.toml
backend/: db.sqlite3  pyproject.toml
backend/app/community/: apps.py  models.py  serializers.py  views.py
backend/app/dashboard/: models.py  serializers.py  urls.py  views.py
backend/app/gallery/: apps.py  models.py  urls.py  views.py
backend/app/notes/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/app/users/: models.py  permissions.py  serializers.py  views.py
backend/config/: settings.py  urls.py  views.py
config/: settings.py  urls.py
dashboard/: urls.py  views.py
dashboard/templates/dashboard/: filter_result.html  statistics.html
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Calendar.tsx  CalendarView.tsx  Dashboard.tsx  (+18 more)
gallery/: models.py  urls.py  views.py
gallery/migrations/: 0001_initial.py
notes/: forms.py  models.py  urls.py  views.py
notes/migrations/: 0001_initial.py  0002_tastingnote_tags_alter_tastingnote_user.py  0003_tastingnote_price.py  0004_tag_alter_tastingnote_user.py  0005_tastingevent.py
staticfiles/css/: dashboard.css  gallery.css  home.css  login.css  modal.css  signup.css  style.css
staticfiles/js/: calendar.js  gallery.js  home.js  modal.js
templates/: base.html
users/: forms.py  models.py  signals.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_profile.py  0003_profile_bio_alter_profile_profile_image.py  0004_alter_profile_user_userprofile.py
(+55 files in other folders)
